cmake_minimum_required(VERSION 3.10)

##############################################################################################################################
# Vars and Versions:
set(SVERSION 1.1.0)

set(PROJECT_HOMEPAGE_URL "https://github.com/evaamo/libMantidsMariaDBTests")
set(PROJECT_CONTACT "Enrique Vaamonde <ev@dqddi.com>")
##############################################################################################################################

##############################################################################################################################
# C++ Global Options Settings:
set(CXX_STANDARD 11)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS YES CACHE BOOL "Export all symbols")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
##############################################################################################################################

##############################################################################################################################
# Project Settings:
project(libMantidsTests_MySQL)
project(${PROJECT_NAME} VERSION ${SVERSION} DESCRIPTION "libMantids Examples")
##############################################################################################################################

##############################################################################################################################
# Other CMake Global settings:
include(GNUInstallDirs)
##############################################################################################################################

#############################################################################################################################
# Subprojects:
ADD_SUBDIRECTORY(hellomantids)

#############################################################################################################################
